Added the real speaker avatar.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="details">
             <!-- 1. Avatar -->
             <!-- TODO: Actual photo -->
-            <img src="pictures/fake-speaker-avatar.jpg" alt="Speaker"/>
+            <img src="pictures/avatar-200.jpg" alt="Speaker"/>
 
             <!-- 2. Speaker -->
             <h2>Robert Kawecki</h2>
@@ -48,6 +48,8 @@
 
             <!-- 5. Contact the speaker -->
             <h2><a href="https://github.com/rkaw92">github.com/rkaw92</a></h2>
+            
+            <!-- Listen, learn, read on. -->
         </div>
     </section>
 
